--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <% include ./partials/header %>
-<div class="container">
+<center><div class="container">
     <div class="row">
         <div style="width: 30%; margin: 25px auto;">
             <h1 style="text-align: center">Sign Up</h1>
@@ -19,6 +19,6 @@
             <a class="btn btn-outline-warning btn-lg btn-block" href="/">Go Back</a>
         </div>
     </div>
-</div>
+</div></center>
 <% include ./partials/footer %>
 
