--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,6 @@
 <%include ./partials/header%>
 <div class="container">
-    <div id="landing-header">
+    <div id="landing-header" style="text-align: center">
  		<h1>Welcome to WalletMan!</h1>
 		<a href="/login" class="btn btn-lg btn-success">Login</a>
 		<a href="/register" class="btn btn-lg btn-success">Register</a>
