--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,10 +14,10 @@
                     <input class="form-control" type="password" name="password" placeholder="password" required>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-outline-warning btn-lg btn-block">Login</button>
+                    <button class="btn btn-outline-success btn-lg btn-block">Login</button>
                 </div>
             </form>
-            <a class="btn btn-outline-warning btn-lg btn-block" href="/">Go Back</a>
+            <a class="btn btn-outline-success btn-lg btn-block" href="/">Go Back</a>
         </div>
     </div>
 </div>
