--- a/views/category.ejs
+++ b/views/category.ejs
@@ -1,3 +1,76 @@
 <% include ./partials/header %>
-
+<body>
+<div class="container">
+    <header class="jumbotron">
+                <div class="container">
+                    <center><h1>Categorical Comparision <i class="fas fa-hand-holding-usd"></i></h1></center>
+                    <center><p>Track Your Daily Expenses Using this Web App</p></center>
+                    <center><p>
+                    <a class="btn btn-primary btn-large" href="/home/<%=currentUser.id%>/newCategory">Add New Category</a>
+                </p></center>
+            <center><h4 style="color:green">Hello <%=currentUser.username%></h4></center>
+        </div>
+    </header>
+    <div class="row">
+        <div class="col-md-6">
+            <canvas id="myRadarChart"></canvas>  
+        </div>
+        <div class="col-md-6">
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+var ctx1 = document.getElementById("myRadarChart").getContext('2d');
+    var myRadarChart = new Chart(ctx,{
+        type:"radar",
+        data:{
+            labels:<%- JSON.stringify(categoryName)%>,
+            datasets:[{
+                label:"My First Dataset",
+                data:[<%=categoryAmountToday%>],
+                fill:true,
+                backgroundColor:"rgba(255, 99, 132, 0.2)",
+                borderColor:"rgb(255, 99, 132)",
+                pointBackgroundColor:"rgb(255, 99, 132)",
+                pointBorderColor:"#fff",
+                pointHoverBackgroundColor:"#fff",
+                pointHoverBorderColor:"rgb(255, 99, 132)"
+            },
+                {
+                    label:"My Second Dataset",
+                    data:[<%=categoryAmountYesterday%>],
+                    fill:true,
+                    backgroundColor:"rgba(54, 162, 235, 0.2)",
+                    borderColor:"rgb(54, 162, 235)",
+                    pointBackgroundColor:"rgb(54, 162, 235)",
+                    pointBorderColor:"#fff",
+                    pointHoverBackgroundColor:"#fff",
+                    pointHoverBorderColor:"rgb(54, 162, 235)"}
+                    ]},
+                    options:{
+                        elements:{
+                            line:{
+                                tension:0,
+                                borderWidth:3
+                            }
+                        }
+                    }
+    });
+</script>
+</body>
 <% include ./partials/footer %>
