--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,14 +9,14 @@
                     <input class="form-control" type="text" name="username" placeholder="username" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Username:</label>
+                    <label for="password">Password:</label>
                     <input class="form-control" type="password" name="password" placeholder="password" required>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-outline-warning btn-lg btn-block">Sign Up!</button>
+                    <button class="btn btn-outline-success btn-lg btn-block">Sign Up!</button>
                 </div>
             </form>
-            <a class="btn btn-outline-warning btn-lg btn-block" href="/">Go Back</a>
+            <a class="btn btn-outline-success btn-lg btn-block" href="/">Go Back</a>
         </div>
     </div>
 </div></center>
