--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,9 +2,22 @@
 <div class="container">
     <div id="landing-header" style="text-align: center">
         <br><br><br><br><br><br><br>
- 		<h1>Welcome to WalletMan!</h1>
+        <img src="https://vignette.wikia.nocookie.net/logopedia/images/8/8a/W._logo_old.svg/revision/latest?cb=20100524160904" class="rounded mx-auto d-block" alt="...">
+ 		<h1><i class="fas fa-wallet"></i> WalletMan! <i class="fas fa-hand-holding-usd"></i></h1>
 		<a href="/login" class="btn btn-lg btn-success">Login</a>
 		<a href="/register" class="btn btn-lg btn-success">Register</a>
+    </div>
+    <br><br>
+    <div class="row">
+    <div class="col-md-4">
+        <img src="https://png2.kisspng.com/sh/da2b7989ce892f0dcb6258603e697e2c/L0KzQYm3VsAyN6tui5H0aYP2gLBuTfxwb5Cyi9d2YX73ebS0kBNpd51mip97ZXP3ebfwhgIuaZ15feR3YYTsfri0gCVzepZzReJyZT3meLL5lL02amI1fqI9Y0LlcYm5UL4zOGY1SasCN0G4QoiBU8Y4PGk2T6oDLoDxd1==/kisspng-logo-semantic-scholar-rectifier-alternating-curren-pie-chart-5b10f04c2ba820.2050197715278367481788.png" class="rounded float-left" alt="...">
+    </div>
+    <div class="col-md-4">
+        <img src="https://png2.kisspng.com/sh/aee507571f3848c0b4442902490eec15/L0KzQYm3VMEyN6psj5H0aYP2gLBuTfNwdaF6jNd7LXnmf7B6TgRqdZYygNHAcnfvccT6TfNtd5RwRdV1b3PuPYbogBUzOZY5edUDOEm4PoG6Ucc6QWk6Sac7M0S4SIa6UscxPmgziNDw/kisspng-computer-icons-time-hourglass-clock-clock-5ace21e4ac8895.0317998515234585327067.png" class="rounded mx-auto d-block" alt="...">
+    </div>
+    <div class="col-md-4">
+        <img src="https://images.vexels.com/media/users/3/143065/isolated/preview/c6cbc8cf5ca3856bca8d5f28c0471fca-bar-graph-cart-by-vexels.png" class="rounded float-right" alt="...">
+    </div>
     </div>
 </div>
 <% include ./partials/footer %>
