--- a/views/category.ejs
+++ b/views/category.ejs
@@ -15,31 +15,14 @@
         <div class="col-md-6">
             <canvas id="myRadarChart"></canvas>  
         </div>
-        <div class="col-md-6">
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-        </div>
     </div>
 </div>
 <script>
 var ctx1 = document.getElementById("myRadarChart").getContext('2d');
-    var myRadarChart = new Chart(ctx,{
+    var myRadarChart = new Chart(ctx1,{
         type:"radar",
         data:{
-            labels:<%- JSON.stringify(categoryName)%>,
+            labels:<%- JSON.stringify(categoryNameToday)%>,
             datasets:[{
                 label:"My First Dataset",
                 data:[<%=categoryAmountToday%>],
