--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -8,7 +8,9 @@
 		<a href="/login" class="btn btn-lg btn-success">Login</a>
 		<a href="/register" class="btn btn-lg btn-success">Register</a>
     </div>
+</div>
     <br><br>
+<div id="patch">
     <div class="row">
     <div class="col-md-4">
         <img src="https://png2.kisspng.com/sh/da2b7989ce892f0dcb6258603e697e2c/L0KzQYm3VsAyN6tui5H0aYP2gLBuTfxwb5Cyi9d2YX73ebS0kBNpd51mip97ZXP3ebfwhgIuaZ15feR3YYTsfri0gCVzepZzReJyZT3meLL5lL02amI1fqI9Y0LlcYm5UL4zOGY1SasCN0G4QoiBU8Y4PGk2T6oDLoDxd1==/kisspng-logo-semantic-scholar-rectifier-alternating-curren-pie-chart-5b10f04c2ba820.2050197715278367481788.png" class="rounded float-left" alt="...">
@@ -20,5 +22,5 @@
         <img src="https://images.vexels.com/media/users/3/143065/isolated/preview/c6cbc8cf5ca3856bca8d5f28c0471fca-bar-graph-cart-by-vexels.png" class="rounded float-right" alt="...">
     </div>
     </div>
-</div>
+    </div>
 <% include ./partials/footer %>
